--- a/prestations.css
+++ b/prestations.css
@@ -73,7 +73,7 @@ nav .liens li:hover{
 /*PRESTATION*/
 /*PIED DE PAGE*/
 footer{
-    position: absolute;
+    position: relative;
     bottom: 0;
     width: 100%;
     background-color: #1a1a1a;
